--- a/0.Intro/1.RAG.md
+++ b/0.Intro/1.RAG.md
@@ -1,4 +1,7 @@
 # RAG
+- [ACL 2023 Tutorial:
+Retrieval-based Language Models and Applications](https://acl2023-retrieval-lm.github.io/)
+
 ## 1 大规模语言模型的现状及挑战
 在自然语言处理领域, 大型语言模型（LLM）如GPT-3、BERT等已经取得了显著的进展, 它们能够生成连贯、自然的文本, 回答问题, 并执行其他复杂的语言任务。然而, 这些模型存在一些固有的局限性, 如 “模型幻觉问题”、“时效性问题”和“数据安全问题”。
 
@@ -27,3 +30,20 @@ Retrieval Augment Generation有两个重要的组成部分，`预训练大模型
 <div align=center>
     <image src="imgs/RAG.png" width=800>
 </div>
+
+## 3 为什么需要 RAG
+
+单单大模型，其实已经回答很多问题，而Finetune也可以起到补充领域知识的作用，为什么RAG仍然如此重要呢？
+
+>LLM是有损压缩，不能记住其参数中的所有（长尾）知识
+- 大模型尽管参数量很大，但相比人类的所有知识依然只占九牛一毛。因此例如问及 Geoffery Hinton 的文章时，最有名的几篇文章确实能够正确回答，但很多长尾的文章实际并非来自于Geoffery Hinton，甚至可能是捏造的。因此，大模型确实需要通过搜索召回相关领域的知识来补充领域特定的知识
+
+>LLM的知识很容易过时，很难更新
+- 大模型的训练数据存在时间截止的问题。尽管可以通过 Finetune 来为大模型加入新的知识，但大模型的的训练成本和时间依然是相当可观的，通常需要大量的计算资源，时间也是天级别更新。不论是向量数据库还是搜索引擎，数据的更新都更加容易，这有助于业务数据的实时性，且模型重新训练的周期被大大拉长了，避免了频繁Finetune带来的数据正确性，政策等风险
+
+>LLM的输出很难解释和验证
+- 使用 LLM 生成的结果，很难验证其准确性，存在着大量谬误。通过RAG的方式，所有数据可以记录数据来源，以便于通过人工或者机器的方式校验结果
+
+
+>LLMs被证明很容易泄漏私有数据
+- 尽管可以向 LLM 通过 Finetune 的方式添加领域知识，但这些领域知识很可能包含个人或者公司的机密信息，且这些数据很可能通过模型在不经意之间泄露出去。通过增加私有数据存储的方式，用户的数据可以更加安全
